Edge Split operator splits unselected edges #35308

Closed
opened 2013-05-11 12:21:54 +02:00 by Manfred Giebler · 5 comments

%%%--- Operating System, Graphics card ---
Reproduced on Windows XP (32 bit), Debian GNU/Linux 7.0 (64 bit), with AMD and Nvidia graphics.

- Blender version with error, and version that worked ---

Release 2.67.0 (r56533), official binaries from download.blender.org. Did not occur in previous release.

- Short description of error ---

Edge Split operator splits unselected edges.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Add a new mesh plane, switch to edit mode, subdivide a few times. Select an edge loop, choose Mesh-->Edges-->Edge Split from the menu.

Expected: The plane should be split along the selected edges.

Observed: Many other (unselected) edges get split as well.

The attached image shows the plane with a Smooth modifier attached to create visible gaps between split edges.
%%%

%%%--- Operating System, Graphics card --- Reproduced on Windows XP (32 bit), Debian GNU/Linux 7.0 (64 bit), with AMD and Nvidia graphics. - Blender version with error, and version that worked --- Release 2.67.0 (r56533), official binaries from download.blender.org. Did not occur in previous release. - Short description of error --- Edge Split operator splits unselected edges. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Add a new mesh plane, switch to edit mode, subdivide a few times. Select an edge loop, choose Mesh-->Edges-->Edge Split from the menu. Expected: The plane should be split along the selected edges. Observed: Many other (unselected) edges get split as well. The attached image shows the plane with a Smooth modifier attached to create visible gaps between split edges. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Can't redo this bug - tried on grid and subdivided plane, both directions, after running various other tools.

I'm guessing it could be caused by not clearing internal tags before operating on each edge.

Could you post a blend file?%%%

%%%Can't redo this bug - tried on grid and subdivided plane, both directions, after running various other tools. I'm guessing it could be caused by not clearing internal tags before operating on each edge. Could you post a blend file?%%%

%%%I just did some additional tests and discovered that the edge selection method makes all the difference here. Indeed, for edge loops there is Loop Select (holding down Alt) which does not trigger the bug.

Try selecting an arbitrary edge path using the Shortest Path Select method: select an edge that touches one end of the plane, then hold down Ctrl and select an edge touching the opposite end. A subsequent Edge Split will fail.

I can't post a blend file because if I save and reload the file between selecting and splitting, the problem does not occur. Also, if I drop out of edit mode between selecting and splitting, things will work as expected. It seems that Shortest Path Select messes up the internal representation of the mesh, and saving the file or leaving edit mode has a sanitizing effect.

By the way, contrary to what I said earlier, this bug does exist in 2.66a too.%%%

%%%I just did some additional tests and discovered that the edge selection method makes all the difference here. Indeed, for edge *loops* there is Loop Select (holding down Alt) which does not trigger the bug. Try selecting an arbitrary edge *path* using the Shortest Path Select method: select an edge that touches one end of the plane, then hold down Ctrl and select an edge touching the opposite end. A subsequent Edge Split will fail. I can't post a blend file because if I save and reload the file between selecting and splitting, the problem does not occur. Also, if I drop out of edit mode between selecting and splitting, things will work as expected. It seems that Shortest Path Select messes up the internal representation of the mesh, and saving the file or leaving edit mode has a sanitizing effect. By the way, contrary to what I said earlier, this bug does exist in 2.66a too.%%%

%%%fixed r56760.%%%

%%%fixed r56760.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35308
No description provided.