fix [#35308] Edge Split operator splits unselected edges