source/blender/bmesh/operators/bmo_edgesplit.c
@@ -39,6 +39,7 @@ void bmo_split_edges_exec(BMesh *bm, BMOperator *op)
 {
 	const bool use_verts = BMO_slot_bool_get(op->slots_in, "use_verts");
 
+	BM_mesh_elem_hflag_disable_all(bm, BM_EDGE, BM_ELEM_TAG, false);
 	BMO_slot_buffer_hflag_enable(bm, op->slots_in, "edges", BM_EDGE, BM_ELEM_TAG, false);
 
 	if (use_verts) {
